+ Added "navbar-brand" class back to link + Removed hardcoded navbar height. This fixed the shift issue. +Reduced the padding for the navbar.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,13 +5,9 @@ body {
 }
 
 .navbar {
-    background-color: #263f44; 
-    height: 4rem;
+    background-color: #263f44;
+    padding: 0.2rem 1rem;
 }
-
-/* .navbar-brand {
-    
-} */
 
 .navbar-brand-img {
     height: 3.5rem;
